--- a/mlFlow/MyFlow.ipynb
+++ b/mlFlow/MyFlow.ipynb
@@ -944,7 +944,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Entrenamiento 2"
+        "## Entrenamiento 2\n",
+        "\n",
+        "Hago un segundo intento con otro algoritmo, a ver si me va mejor"
       ]
     },
     {
@@ -2088,6 +2090,19 @@
         "model = mlflow.pyfunc.load_model(f\"models:/diabetes-predictor-xgb-IA3/Production\")\n",
         "\n",
         "model.predict(X_test)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Concluciones\n",
+        "\n",
+        "Los resultados no han sido muy satisfactorios, pero la parte principal que quería demostrar creo que lo he logrado bastante bien.\n",
+        "\n",
+        "Si tuviera más tiempo daría prioridad a la exploracón de datos y preporcesamiento, realmente me confié de obtenerlos de sklearn.datasets y haber visto lo bien que fue en clase.\n",
+        "\n",
+        "Más allá de eso, considero una excelente herramienta ML Flow, y he encotnrado mucho el gusto a de ella. Sin duda la implementaría si no existiera en mis futuros proyectos (hasta ahora no he podido trabajar en proyectos de IA), y conocer nuevas y distintas herramientas similares."
       ]
     }
   ],
